[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-rc.3"
actix-rt = "2.6.0"
diesel = { version = "1.4.8", features = ["postgres"] }
diesel_migrations = "1.4.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["with-serde_json-1"] }
postgres-protocol = "0.6.3"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
log = "0.4.14"
derive_more = "0.99.17"
anyhow = "1.0.55"
