[package]
name = "image-effects"
version = "0.1.0"
authors = ["art-in <artin@artin.space>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# generage DWARF debug section with params/vars names.
# TODO: enable when DWARF is supported by wasm-to-wat converters
# https://github.com/WebAssembly/wabt/issues/1290
# dwarf-debug-info = true

[dependencies]
wasm-bindgen = "0.2.55"

console_error_panic_hook = { version = "0.1.6", optional = true }
image = "0.21.1"
