[package]
name = "server"
version = "0.1.0"
authors = ["art-in <artin@artin.space>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0-alpha.6"
actix-files = "0.2.0-alpha.3"
actix-multipart = "0.2.0-alpha.3"

diesel = { version = "1.4.3", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = "1.4.0"

listenfd = "0.3.3"
env_logger = "0.7.1"
dotenv = "0.15.0"
toml = "0.5.5"
r2d2 = "0.8.7"
futures = "0.3.1"
log = "0.4.8"
serde = "1.0.103"
serde_json = "1.0.44"
